# PSVITA_SNAKE

./: CMakeLists.txt
sce_sys/livearea/contents/: template.xml
src/: main.c
