cmake_minimum_required(VERSION 2.8)

## This includes the Vita toolchain, must go before project definition
# It is a convenience so you do not have to type 
# -DCMAKE_TOOLCHAIN_FILE=$VITASDK/share/vita.toolchain.cmake for cmake. It is 
# highly recommended that you include this block for all projects.
if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  if(DEFINED ENV{VITASDK})
    set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain file")
  else()
    message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
  endif()
endif()

##(im not sure if it means the root folder name. so just use root folder)
set(SHORT_NAME Snake)

## Define project parameters here
# Name of the project 
project(${SHORT_NAME}) 
# This line adds Vita helper macros, must go after project definition in order 
# to build Vita specific artifacts (self/vpk).
include("${VITASDK}/share/vita.cmake" REQUIRED)

## Configuration options for this app
# Display name (under bubble in LiveArea)
set(VITA_APP_NAME "Snake")
# Unique ID must be exactly 9 characters. Recommended: XXXXYYYYY where X = 
# unique string of developer and Y = a unique number for this app
# welp, lets do NEKOYYYYY. 0 is used for starter
set(VITA_TITLEID  "NEKO00002") 
# Optional version string to show in LiveArea's more info screen
set(VITA_VERSION  "01.00")

## Flags and includes for building
# Note that we make sure not to overwrite previous flags
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

# Add any additional include paths here
# e.g ../common
include_directories(
  
)

# Add any additional library paths here
# ${CMAKE_CURRENT_BINARY_DIR} lets you use any library currently being built
link_directories(
  ${CMAKE_CURRENT_BINARY_DIR}
)

## Build and link
# Add all the files needed to compile here
add_executable(${SHORT_NAME}
  src/font.c
  src/main.c
)

# Library to link to (drop the -l prefix). This will mostly be stubs.
target_link_libraries(${SHORT_NAME}
  vita2d 
  soloud
  pthread
  SceDisplay_stub
  SceGxm_stub
  SceLibKernel_stub 
  SceCtrl_stub 
  SceTouch_stub 
  SceSysmodule_stub  
  SceCommonDialog_stub 
  SceAudio_stub
  freetype
  png
  z
  m
)

## Create Vita files
vita_create_self(${SHORT_NAME}.self ${SHORT_NAME})
# The FILE directive lets you add additional files to the VPK, the syntax is 
# FILE src_path dst_path_in_vpk. In this case, we add the LiveArea paths.
vita_create_vpk(${SHORT_NAME}.vpk ${VITA_TITLEID} ${SHORT_NAME}.self
  VERSION ${VITA_VERSION}
  NAME ${VITA_APP_NAME}
  ## the livearea stuff
  FILE sce_sys/icon0.png sce_sys/icon0.png
  FILE sce_sys/livearea/contents/bg.png sce_sys/livearea/contents/bg.png
  FILE sce_sys/livearea/contents/startup.png sce_sys/livearea/contents/startup.png
  FILE sce_sys/livearea/contents/template.xml sce_sys/livearea/contents/template.xml
  ## the in app stuff
  FILE assets/apple.png assets/apple.png
  FILE assets/background.png assets/background.png
  FILE assets/snake.png assets/snake.png
  FILE assets/snake_head.png assets/snake_head.png
  FILE assets/gameover.png assets/gameover.png
  FILE assets/paused.png assets/paused.png
  ## the audio files
  FILE audio/coin.ogg audio/coin.ogg
  FILE audio/error.ogg audio/error.ogg
)
